@@ -274,6 +274,7 @@ ReplSetServers.prototype.allServerInstances = function() {
 }
 
 ReplSetServers.prototype.connect = function(parent, options, callback) {
+  console.log("----------------------------------------------------------------------------------- connect")
   if('function' === typeof options) callback = options, options = {};  
   if(options == null) options = {};
   if(!('function' === typeof callback)) callback = null;
@@ -349,7 +350,7 @@ ReplSetServers.prototype.connect = function(parent, options, callback) {
         var tags = document.tags ? document.tags : {};
         var primary = document.primary;
         var me = document.me;
-
+        
         // Error handler for the servers, this handles unexpected errors coming from 
         // a wrong callback or something else
         var errorHandler = function(err) {
@@ -542,6 +543,11 @@ ReplSetServers.prototype.connect = function(parent, options, callback) {
       replSetSelf._state.errorMessages.push(err);
     }
   }  
+  
+  // Check if we have an error in the inital set of servers and callback with error
+  if(replSetSelf._state.errorMessages.length > 0 && firstCall) {
+    callback(replSetSelf._state.errorMessages[0], null);
+  }
 }
 
 ReplSetServers.prototype.checkoutWriter = function() {
